# YomiTokuPDFSearchable

./: .gitignore  README.md  createsearchablepdf.py  main.py  pyproject.toml  requirements.txt
