[project]
name = "yomitokupdfsearchable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.13.3",
    "fitz==0.0.1.dev2",
    "numpy==2.2.3",
    "opencv-contrib-python==4.11.0.86",
    "opencv-python==4.11.0.86",
    "opencv-python-headless==4.11.0.86",
    "pdf2image==1.17.0",
    "pillow==11.1.0",
    "reportlab==4.3.1",
    "tqdm==4.67.1",
    "yomitoku==0.7.2",
]
